docs: add doc to show
